fix collapse arrow placement with new var and comment some properties

--- a/src/styles/vars/components/Collapse/_collapse.css
+++ b/src/styles/vars/components/Collapse/_collapse.css
@@ -2,6 +2,8 @@
   --collapse-panel-border-radius: var(--ql-border-radius-md);
 
   --collapse-header-padding: 12px 16px;
+  --collapse-header-arrow-padding: unset;
+
   --collapse-header-padding-extra: 40px;
   --collapse-header-bg: var(--ql-color-dark-t-lighten5);
   --collapse-content-padding: 16px;
